--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invest Consulting SARL | Cabinet de Conseil</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
     <style>
         /* Add styles for the logo and dropdown */
         .logo-img {
@@ -438,3 +439,4 @@
                 <div class="footer-col">
                     <h3>Sekatech Digital</h3>
                     <p>Providing comprehensive di
+
