--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="header-inner">
                 <!-- Logo at top left -->
                 <a href="#" class="logo">
-                    <img src="https://via.placeholder.com/150x40/007bff/ffffff?text=INVEST+CONSULTING" alt="Invest Consulting SARL" class="logo-img">
+                    <img src="logo.jpg" alt="Invest Consulting SARL" class="logo-img">
                 </a>
                 
                 <button class="mobile-menu-btn" id="mobileMenuBtn">
@@ -439,4 +439,5 @@
                 <div class="footer-col">
                     <h3>Sekatech Digital</h3>
                     <p>Providing comprehensive di
+
 
