--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invest Consulting SARL | Cabinet de Conseil</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
     <style>
         /* intentionaly merged with HTML styles for the logo and dropdown */
         .logo-img {
@@ -495,3 +496,4 @@
     </script>
 </body>
 </html>
+
